<resources>
    <string name="app_name">LentesArduino</string>
    <string name="action_settings">Settings</string>
    <string name="hablar">Hablar</string>
    <string name="conectar">Conectar</string>
    <string name="desconectar">Desconectar</string>
    <string name="silenciar">Silenciar</string>
    <string name="activar">Activar</string>
    <string name="distancia">Distancia</string>
    <string name="promedio">Promedio</string>
    <string name="error">Error</string>
    <string name="desconectado">Desconectado</string>
    <string name="conectado">Conectado</string>
</resources>
